--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-﻿pandas==1.3.5
+pandas==1.3.5
 plotly==5.6.0
-streamlit==1.7.0
+streamlit==1.11.0
 streamlit-authenticator==0.1.1
 hydralit-components==1.0.9
